Fix: z-index 순서대로 보이도록 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -224,6 +224,9 @@ html {
   .toolbar-wrapper {
     @apply rounded-2xl border border-solid border-gray-100 shadow-md bg-white p-3 flex gap-2 z-10;
   }
+  .asset-toolbar-wrapper {
+    @apply absolute -top-6 left-1/2 transform -translate-x-1/2 rounded-2xl border border-solid border-gray-100 shadow-md bg-white p-2 flex gap-2;
+  }
 
   .ellipsis2 {
     display: -webkit-box;
